Migrating PeerDAS to Fulu (#163)
* Upgrade acceptance tests flakiness fix (#8635)

* start EL and CL pair together to avoid delay
* give and extra 30 secs to genesis

Signed-off-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

---------

Signed-off-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

* removed consolidations signing domain for electra (#8638)

This is no longer required, cleaning up.

fixes #8636

Signed-off-by: Paul Harris <paul.harris@consensys.net>

* Update network file (#8631)


Signed-off-by: gconnect <agatevureglory@gmail.com>
Co-authored-by: Paul Harris <paul.harris@consensys.net>
Co-authored-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

* Add deposit chainId to network file on start (#8639)

* Update CHANGELOG.md to mention new p2p flood publish param (#8633)

Co-authored-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

* Introduces `SchemaRegistry` and related classes (#8614)

* Implement a DatabaseArchiveWriter and add to pruneOldestBlobSidecars (#8640)

* Implement a DatabaseArchiveWriter and add to pruneOldestBlobSidecars. Currently not configurable and only implements a NoopWriter.

* Moving requests out of ExecutionPayload (#8600)

* Update Electra penalty computation. EIP7125 (#8612)

Update Electra penalty computation.

* Add fix for CVE-2024-7254 (#8647)

* FIx codespell check (#8652)

* Upgrade jc-kzg-4844 to latest version (#8651)

* Add schema registry in schema definitions (#8615)

* feat: LUKSO Mainnet Dencun Hardfork (#8650)

* Add LUKSO Deneb activation to CHANGELOG (#8654)

* Fix blockImportCompleted (#8653)

* Add get-earliest-available-block-slot to debug tool (#8649)

* add get-earliest-available-block-slot to debug tool

Signed-off-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

---------

Signed-off-by: Gabriel Fukushima <gabrielfukushima@gmail.com>

* Gossip_V_1_2 (IDONTWANT) (#8648)

* Gossip_V_1_2

* changelog

---------

Co-a